# pr0-vk

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  config.sh  generate.sh  log.txt  pr0-vk.sublime-project  pr0-vk.sublime-workspace  run.sh
CMake/Modules/: FindAssimp.cmake  FindDevIL.cmake  FindDraco.cmake  FindFmt.cmake  FindFreeImage.cmake  FindGLFW.cmake  FindGLI.cmake  FindGLM.cmake  FindJSON.cmake  FindRemotery.cmake  FindSpanLite.cmake  FindSpdlog.cmake  FindStb_image.cmake  FindTinyglTF.cmake  FindVulkan.cmake
assets/config/: core.json
assets/meshes/: Arch.blend  Arch.fbx  FerrisWheel_lowpoly.blend  FerrisWheel_lowpoly.mtl  Low_Poly_Planet1.blend  Tree1.mtl  Truck_001.blend  arch.mtl
assets/shaders/: main.frag  main.frag.spv  main.frag.spv-2  main.frag.spv-3  main.frag.spvasm-1  main.frag.spvasm-2  main.vert  main.vert.spv  main.vert.spv-2  main.vert.spv-3  main.vert.spvasm-1  main.vert.spvasm-2
rd/: pbr.frag  skin.frag
shaders/: imgui.frag  imgui.vert  simple.frag  simple.vert
src/: Vulkan.hpp  VulkanDispatch.hpp  app.cpp  conv.cpp  helloTriangle.txt  impl.txt  main.cpp  proto.cpp
src-test/: main.cpp
src/app/: dispatcher.cpp  dispatcher.hpp  mainState.hpp  renderer.cpp  renderer.hpp  rni.hpp  state.hpp
src/app/action/: bootstrap.hpp  checkModels.hpp  loadModel.hpp
src/app/main/: resources.hpp  state.hpp
src/conv/: common.hpp  desc.hpp  mesh.hpp
src/ngn/: config.cpp  config.hpp  event.hpp  external.hpp  fs.cpp  fs.hpp  game.hpp  ilogic.hpp  log.cpp  log.hpp  prof.cpp  prof.hpp  str.hpp  threading.cpp  threading.hpp
src/ngn/config/: core.cpp  core.hpp  core.schema.json  generator.js
src/rn/: commands.hpp  context.hpp  contextAbstract.hpp  glfw.cpp  glfw.hpp  graph.hpp  graph.old.hpp  imageFormat.hpp  imageType.hpp  imageViewType.hpp  model.hpp  pipeline.cpp  pipeline.hpp  resources.hpp  types.cpp  types.hpp  window.cpp  window.hpp
src/rn/db/: buffer.hpp  loader.hpp  material.hpp  model.hpp  modelCollection.hpp  texture.cpp  texture.hpp  types.hpp
src/rn/db/loader/: gltf.cpp  gltf.hpp  types.hpp
src/rn/db/parser/: gli.cpp  gli.hpp  stbi.cpp  stbi.hpp  types.hpp
src/rn/graph/: commands.hpp  compile.cpp  compile.hpp  passes.hpp  pipeline.hpp  resolve.hpp  types.cpp  types.hpp
src/rn/nulli/: context.cpp  context.hpp  resources.cpp.old  resources.hpp.old
src/rn/vki/: context.cpp  context.hpp  device.hpp  dispatch.cpp  dispatch.hpp  executor.cpp  executor.hpp  id.cpp  id.hpp  mapping.cpp  mapping.hpp  recorder.cpp  recorder.hpp  resources.cpp  resources.cpp.old  resources.hpp  resources.hpp.old  texture.hpp  trace.cpp  trace.hpp  util.hpp
src/rn/vki/context/: allocatorCreator.cpp  allocatorCreator.hpp  commandPoolGroupsCreator.cpp  commandPoolGroupsCreator.hpp  debugCreator.cpp  debugCreator.hpp  deviceCreator.cpp  deviceCreator.hpp  instanceCreator.cpp  instanceCreator.hpp  muticesSelector.cpp  muticesSelector.hpp  physicalDeviceSelector.cpp  physicalDeviceSelector.hpp  queueFamilyIndexSelector.cpp  queueFamilyIndexSelector.hpp  queueSelector.cpp  queueSelector.hpp  queuesPlanner.cpp  queuesPlanner.hpp  queuesSelector.cpp  queuesSelector.hpp  surfaceCreator.cpp  surfaceCreator.hpp  surfaceExtentSelector.cpp  surfaceExtentSelector.hpp  surfaceFormatSelector.cpp  surfaceFormatSelector.hpp  surfaceImageViewsCreator.cpp  surfaceImageViewsCreator.hpp  surfaceImagesSelector.cpp  surfaceImagesSelector.hpp  swapchainCreator.cpp  swapchainCreator.hpp  synchronizationCreator.cpp  synchronizationCreator.hpp  types.hpp
src/rn/vki/creators/: allocatorCreator.cpp  allocatorCreator.hpp  contextCreator.cpp  contextCreator.hpp  debugCallbackCreator.cpp  debugCallbackCreator.hpp  deviceCreator.cpp  deviceCreator.hpp  extensionsStaticLoader.cpp  extensionsStaticLoader.hpp  instanceCreator.cpp  instanceCreator.hpp  instancePlanner.cpp  instancePlanner.hpp  muticesSelector.cpp  muticesSelector.hpp  physicalDeviceSelector.cpp  physicalDeviceSelector.hpp  queuesPlanner.cpp  queuesPlanner.hpp  queuesSelector.cpp  queuesSelector.hpp  surfaceCreator.cpp  surfaceCreator.hpp  surfaceExtentSelector.cpp  surfaceExtentSelector.hpp  surfaceFormatSelector.cpp  surfaceFormatSelector.hpp  surfaceImageViewsCreator.cpp  surfaceImageViewsCreator.hpp  surfaceImagesSelector.cpp  surfaceImagesSelector.hpp  swapchainCreator.cpp  swapchainCreator.hpp
src/rn/vki/db/: mesh.cpp  mesh.hpp  texture.cpp  texture.hpp
src/rn/vki/device/: .gitignore  builder.js
src/rn/vki/memory/: block.cpp  block.hpp  (+6 more)
src/rn/vlk/: configMapping.hpp  context.hpp  contextCreator.hpp  debugCallbackCreator.cpp  debugCallbackCreator.hpp  debugCallbackDispatchTable.cpp  debugCallbackDispatchTable.hpp  debugCallbackOwner.hpp  debugCallbackOwner.hpp.old  debugCallbackWrapper.hpp  debugCreator.hpp  deviceCreator.hpp  deviceInit.hpp  deviceOwner.hpp  deviceOwner.hpp.old  dispatch.inl  glfw.hpp  glfwCreator.hpp  glfwOwner.hpp  glfwWrapper.hpp  id.cpp  id.hpp  instance.hpp  instanceCreator.cpp  instanceCreator.hpp  instanceInit.hpp  instanceOwner.hpp  instanceOwner.hpp.old  instanceWrapper.hpp  interface.cpp  interface.hpp  mapping.cpp  mapping.hpp  physicalDeviceCreator.hpp  physicalDeviceHandle.hpp  physicalDeviceOwner.hpp  physicalDeviceOwner.hpp.old  queues.hpp  queuesCreator.hpp  queuesHandle.hpp  (+9 more)
src/rn/vlk-0/: device.hpp  instance.hpp  physicalDevice.hpp  surface.hpp  swapchain.hpp
src/util/: contains.hpp  countOf.hpp  either.hpp  flatStorage.hpp  fold.hpp  format.hpp  fs.hpp  implode.hpp  join.hpp  leadingZeroes.hpp  map.hpp  nonNull.hpp  opts.hpp  pluck.hpp.proto  scope.hpp  span.hpp  symbol.hpp  threadPool.hpp  trivialVector.hpp  uniqueResource.hpp
src/ware/config/: config.cpp  config.hpp
src/ware/contextGLFW/: contextGLFW.cpp  contextGLFW.hpp
src/ware/contextImgui/: contextImgui.cpp  contextImgui.hpp  mapping.cpp  mapping.hpp
src/ware/contextVK/: contextVK.cpp  contextVK.hpp  vma.cpp  vma.hpp
src/ware/rendererVK/: rendererVK.cpp  rendererVK.hpp
src/ware/swapchainVK/: swapchainVK.cpp  swapchainVK.hpp
src/ware/windowGLFW/: windowGLFW.cpp  windowGLFW.hpp
(+92 files in other folders)
